force-app/main/default/objects/Delivery_Probabiliy__c/Delivery_Probabiliy__c.object-meta.xml
<CustomObject>
    <label>Opportunity Delivery probability</label>
    <nameField>
        <label>Delivery Probability</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Delivery probability</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>