force-app/main/default/objects/Delivery_Probabiliy__c/fields/act_mod_date__c.field-meta.xml
<CustomField>
    <fullName>act_mod_date__c</fullName>
    <label>act_mod_date</label>
    <type>Date</type>
</CustomField>