force-app/main/default/objects/Delivery_Probabiliy__c/fields/act_Modifiedby__c.field-meta.xml
<CustomField>
    <fullName>act_Modifiedby__c</fullName>
    <label>act_Modifiedby</label>
    <length>20</length>
    <type>Text</type>
</CustomField>