force-app/main/default/objects/Delivery_Probabiliy__c/fields/act_reg_date__c.field-meta.xml
<CustomField>
    <fullName>act_reg_date__c</fullName>
    <label>act_reg_date</label>
    <type>Date</type>
</CustomField>