force-app/main/default/objects/Delivery_Probabiliy__c/fields/act_regby__c.field-meta.xml
<CustomField>
    <fullName>act_regby__c</fullName>
    <label>act_regby</label>
    <length>20</length>
    <type>Text</type>
</CustomField>