force-app/main/default/objects/Delivery_Probabiliy__c/fields/Companycode__c.field-meta.xml
<CustomField>
    <fullName>Companycode__c</fullName>
    <label>Companycode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>