force-app/main/default/objects/Delivery_Probabiliy__c/fields/Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Dashboard__c</fullName>
    <formula>HYPERLINK( Dashboardlink__c , Opportunity__r.OpportunityCode__c +&quot; Prob Link&quot;, &quot;_blank&quot;)</formula>
    <label>Dashboard</label>
    <type>Text</type>
</CustomField>