force-app/main/default/objects/Delivery_Probabiliy__c/fields/Dashboardlink__c.field-meta.xml
<CustomField>
    <fullName>Dashboardlink__c</fullName>
    <label>Dashboardlink</label>
    <type>Url</type>
</CustomField>