force-app/main/default/objects/Delivery_Probabiliy__c/fields/DeliveryActivity__c.field-meta.xml
<CustomField>
    <fullName>DeliveryActivity__c</fullName>
    <label>DeliveryActivity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>