force-app/main/default/objects/Delivery_Probabiliy__c/fields/prob_Modifiedby__c.field-meta.xml
<CustomField>
    <fullName>prob_Modifiedby__c</fullName>
    <label>prob_Modifiedby</label>
    <length>20</length>
    <type>Text</type>
</CustomField>