force-app/main/default/objects/Delivery_Probabiliy__c/fields/prob_reg_date__c.field-meta.xml
<CustomField>
    <fullName>prob_reg_date__c</fullName>
    <label>prob_reg_date</label>
    <type>Date</type>
</CustomField>