force-app/main/default/objects/Delivery_Probabiliy__c/fields/prob_regby__c.field-meta.xml
<CustomField>
    <fullName>prob_regby__c</fullName>
    <label>prob_regby</label>
    <length>20</length>
    <type>Text</type>
</CustomField>