force-app/main/default/objects/Delivery_Probabiliy__c/fields/TXP__c.field-meta.xml
<CustomField>
    <fullName>TXP__c</fullName>
    <formula>HYPERLINK(  TXP_Link__c  ,  Opportunity__r.OpportunityCode__c  +&quot; TXP Link&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TXP</label>
    <type>Text</type>
</CustomField>