force-app/main/default/objects/Delivery_Probabiliy__c/fields/TXP_Link__c.field-meta.xml
<CustomField>
    <fullName>TXP_Link__c</fullName>
    <label>TXP Link</label>
    <type>Url</type>
</CustomField>